--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.1",
     "cookies": "^0.7.0",
     "express": "^4.15.2",
+    "formidable": "^1.1.1",
     "markdown": "^0.5.0",
     "mongoose": "^4.9.0",
     "swig": "^1.4.2"
